# nonlife-pricing-agent

./: .gitignore  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  LICENSE  README.md  pyproject.toml
agents/: distillation_agent.py  feature_selection_agent.py  gbm_agent.py  grouping_agent.py  hypothesis_agent.py  orchestrator.py
config/: glm_config.yaml  project_config.yaml
core/: data_loader.py  feature_builder.py  feature_pipeline.py  llm_client.py  schemas.py  session_logger.py  validator.py
dashboard/: approval_gate.py  feature_workbench.py  streamlit_app.py
notebooks/: 01_exploration.ipynb
prompts/: distillation.yaml  feature_selection.yaml  grouping.yaml
reports/: gbm_model.txt
reports/sessions/: session_20260620_103855.jsonl  session_20260620_112215.jsonl
tests/: test_feature_pipeline.py  test_gbm_agent.py  test_grouping_agent.py  test_hypothesis_agent.py  test_schemas.py  test_validator.py
tests/fixtures/: sample_features.json
tools/: glm_tools.py  reporting.py  shap_tools.py
