[project]
name = "nonlife-pricing-agent"
version = "0.1.0"
requires-python = ">=3.11"
description = "Agentic framework for Non-Life insurance pricing model distillation"

dependencies = [
    "anthropic>=0.30.0",
    "pydantic>=2.7.0",
    "lightgbm>=4.3.0",
    "shap>=0.45.0",
    "statsmodels>=0.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "tools", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
